--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,20 +3,44 @@ body {
     background-image: url("../images/haha.png");
     background-repeat: no-repeat;
 
-background-size: 100% 395%;
-    
+    background-size: 100% 350%;
+   
 }
 
 .container-fluid {
     border: 2px solid black;
     width: 75%;
+    min-height: 100px;
+    overflow: hidden;
     padding: 10px;
     position: relative;
     top: 50px;
     background-color: white;
+    border-radius: 10px;
+}
+
+#timer {
+    text-align: center;
+    position: absolute;
+    top: -10px;
+    left: 42%;
+    font-size: 33px;
+    padding: 10px;
+    
 }
 
 h1 {
     text-align: center;
+    padding-top: 30px;
+}
+
+#questionBox {
+    text-align: center;
+    
+}
+
+#answerBox {
+   text-align: center;
+   display: none;
 }
 
